--- a/src/style/app.css
+++ b/src/style/app.css
@@ -2,3 +2,13 @@
   height: 30px;
   width: 50px;
 }
+
+.header-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.search-bar-container {
+  display: flex;
+  flex-direction: column;
+}
